# Disaster-Emergency-Response

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml
app/: __init__.py  modules.py  utils.py
app/templates/: main.html  res.html
data/: etl_pipeline.py  process_data.ipynb
models/: ml_pipeline.py  train_classifier.ipynb
